Fix overflowing content

--- a/src/styles/frontpage.styl
+++ b/src/styles/frontpage.styl
@@ -5,7 +5,6 @@ html, body
 
 .front-page
     height 100vh
-    overflow hidden
 
     &__content
         min-height 100vh
@@ -14,6 +13,7 @@ html, body
 
     &__perspective
         overflow-y auto
+        overflow-x hidden
 
         height 100%
         perspective 1px
