--- a/src/styles/post.styl
+++ b/src/styles/post.styl
@@ -18,3 +18,6 @@ h2
     font-family 'Merriweather', serif
     color #666
     font-size 1em
+
+img
+    width 100%
